Revert "Fix navbar issues (flickering, permanent hiding)"
This reverts commit d52842eb168f6bce00b81c13df2a636965b114bc.

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -14,9 +14,6 @@
   position: sticky;
   top: 0;
   background: white;
-  @include desktop() {
-    height: $navbar-height-tall;
-  }
   .navbarSecondary {
     display: none;
     @include desktop() {
@@ -25,11 +22,9 @@
   }
   &.scrolled {
     box-shadow: 0 0 0.5rem 0 #0000005b;
-    @include desktop() {
-      transform: translateY(calc($navbar-height - $navbar-height-tall));
-      .navbarSecondary {
-        visibility: hidden;
-      }
+    height: $navbar-height;
+    .navbarSecondary {
+      display: none;
     }
   }
 
